--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   position: fixed;
   bottom: 0;
-  font-size: 1.5em;
+  font-size: 20px;
   font-weight: bold;
   text-align: center;
   width: 100%;
