--- a/src/components/todolist.module.css
+++ b/src/components/todolist.module.css
@@ -6,4 +6,12 @@
   margin: 0 auto;
   padding: 20px;
   margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.list h1 {
+  color: gray;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
 }
