--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,14 +1,14 @@
 .footer {
   position: fixed;
   bottom: 0;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
   width: 100%;
-  background-color: black;
-  color: white;
+  background-color: #f1f1f1; /* Lighter background color */
+  color: black; /* Dark text color for contrast */
+  text-align: center;
   padding: 10px;
+  font-size: 16px; /* Simpler font size */
 }
+
 .item {
-  margin: 50px;
+  margin: 20px; /* Adjusted margin for simplicity */
 }
